# full-functional-email-newsletter-api-with-rust

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.sqlx/: query-33987529d891e4e59e5890632a691a84a6daef63b814f7fe256ed478e9c16293.json
configuration/: base.yaml  production.yaml
migrations/: 20240518055041_create_subscriptions_table.sql  20240530061155_make_status_not_null_in_subscriptions.sql  20240530061529_create_subscription_tokens_table.sql  20240610050022_rename_password_column.sql  20240713030404_create_issue_delivery_queue_table.sql
scripts/: init_redis.sh
src/: authentication.rs  configurations.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
