[package]
name = "email-nl-api-with-rust"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`
path = "src/lib.rs"
name = "email_newsletter"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4.5.1"
cargo-expand = "1.0.86"
chrono = "0.4.38"
claim = "0.5.0"
config = "0.14.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.202"
serde-aux = "4.5.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1", features = ["v4"] }
validator = "0.14"

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "macros"]}
wiremock = "0.6.0"
