[package]
name = "email-nl-api-with-rust"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`
path = "src/lib.rs"
name = "email_newsletter"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
# Core Web Framework
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.18"
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }

# Async Runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = "1.0.115"
serde_json = "1"
serde-aux = "4"

# Configuration
config = { version = "0.13", default-features = false, features = ["yaml"] }

# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
rand = { version = "0.8", features = ["std_rng"] }
base64 = "0.21.0"

# HTTP Client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }

# Logging and Tracing
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
tracing-actix-web = "0.7"

# Error Handling
thiserror = "1.0.24"
anyhow = "1.0.40"

# Text Processing
unicode-segmentation = "1.7.1"

# Security
argon2 = { version = "0.4", features = ["std"] }
secrecy = { version = "0.8", features = ["serde"] }

# Validation
validator = "0.16"

[dev-dependencies]
once_cell = "1.7.2"
claims = "0.7.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.61"
serde_urlencoded = "0.7.1"
linkify = "0.9"
